fix(Donate): Center-align text in component

--- a/src/app/donate/donate.component.scss
+++ b/src/app/donate/donate.component.scss
@@ -45,9 +45,6 @@
 
 .donation-request .message {
   margin-bottom: 15px;
-}
-
-.donation-request .message h2 {
   text-align: center;
 }
 
